Initial code, tests, and documentation.
This commit is the launchpad commit for django-pgfields,
a package which will provide custom Field subclasses for
use with PostgreSQL.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
-__pycache__
+# Apple
 .DS_Store
+
+# Python
+__pycache__
 *.pyc
 *.egg-info
+
+# Sphinx
+docs/_build
+
+# Testing
+.coverage
+coverage/
+.tox/
