--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,12 @@
-recursive-include docs *
+# ----------------------
+# -- Package Metadata --
+# ----------------------
 include AUTHORS
 include LICENSE
 include VERSION
 include requirements.txt
+
+# -------------------
+# -- Documentation --
+# -------------------
+recursive-include docs *
