--- a/tox.ini
+++ b/tox.ini
@@ -1,26 +1,62 @@
 [tox]
-envlist = py3.3-djdev, py3.3-dj1.5, docs
+envlist =
+    docs,
+    py3.3-djdev,
+    py3.3-djdev-southdev,
+    py3.3-dj1.5,
+    py3.3-dj1.5-south0.8,
+    _coverage,
 
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
 
 commands =
-    python tests/runtests.py
+    coverage run -p --source django_pg/ tests/runtests.py
 
-[testenv:py3.3-djdev]
-basepython = python3.3
 deps =
     -r{toxinidir}/requirements.txt
-    https://github.com/django/django/zipball/master
+    -r{toxinidir}/tests/requirements.txt
 
-[testenv:py3.3-dj1.5]
-basepython = python3.3
-deps =
-    -r{toxinidir}/requirements.txt
 
 [testenv:docs]
 changedir = docs
 deps = sphinx
 commands =
     sphinx-build -W -b html -d {envtmpdir}/doctrees . {envtmpdir}/html
+
+
+[testenv:py3.3-djdev]
+basepython = python3.3
+deps =
+    {[testenv]deps}
+    https://github.com/django/django/zipball/master
+
+
+[testenv:py3.3-djdev-southdev]
+basepython = python3.3
+deps =
+    {[testenv]deps}
+    https://github.com/django/django/zipball/master
+    https://bitbucket.org/andrewgodwin/south/get/default.zip
+
+
+[testenv:py3.3-dj1.5]
+basepython = python3.3
+
+
+[testenv:py3.3-dj1.5-south0.8]
+basepython = python3.3
+deps =
+    {[testenv]deps}
+    south>=0.8,<=0.9
+
+
+[testenv:_coverage]
+basepython = python3.3
+deps =
+    coverage
+commands =
+    coverage combine
+    coverage report -m
+    coverage erase
