Adding gis support.
This commit adds compatiblity with django.contrib.gis, allowing
GIS and django-pgfields to interoperate.

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,8 @@ envlist =
     docs,
     py3.3-djdev,
     py3.3-djdev-southdev,
+    py3.3-dj1.6,
+    py3.3-dj1.6-south0.8,
     py3.3-dj1.5,
     py3.3-dj1.5-south0.8,
     _coverage,
@@ -13,9 +15,9 @@ setenv =
 
 commands =
     coverage run -p --source django_pg/ tests/runtests.py
+    coverage run -p --source django_pg/ tests/runtests.py gis
 
 deps =
-    -r{toxinidir}/requirements.txt
     -r{toxinidir}/tests/requirements.txt
 
 
@@ -29,27 +31,54 @@ commands =
 [testenv:py3.3-djdev]
 basepython = python3.3
 deps =
-    {[testenv]deps}
     https://github.com/django/django/zipball/master
+    {[testenv]deps}
 
 
 [testenv:py3.3-djdev-southdev]
 basepython = python3.3
 deps =
-    {[testenv]deps}
     https://github.com/django/django/zipball/master
     https://bitbucket.org/andrewgodwin/south/get/default.zip
+    {[testenv]deps}
+
+
+[testenv:py3.3-dj1.6]
+basepython = python3.3
+deps =
+    {[testenv]deps}
+    https://github.com/django/django/archive/1.6b1.zip
+setenv =
+    DJANGO_VERSION = 1.6
+
+
+[testenv:py3.3-dj1.6-south0.8]
+basepython = python3.3
+deps =
+    {[testenv]deps}
+    https://github.com/django/django/archive/1.6b1.zip
+    south>=0.8,<0.9
+setenv =
+    DJANGO_VERSION = 1.6
 
 
 [testenv:py3.3-dj1.5]
 basepython = python3.3
+deps =
+    {[testenv]deps}
+    django>=1.5,<1.6    
+setenv =
+    DJANGO_VERSION = 1.5
 
 
 [testenv:py3.3-dj1.5-south0.8]
 basepython = python3.3
 deps =
     {[testenv]deps}
-    south>=0.8,<=0.9
+    django>=1.5,<1.6
+    south>=0.8,<0.9
+setenv =
+    DJANGO_VERSION = 1.5
 
 
 [testenv:_coverage]
