--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,27 @@
 language: python
-python: '3.3'
+python:
+    - 3.3
+env:
+    - POSTGIS_VERSION=2.0.3
+install:
+    # Install prerequisites for PostGIS.
+    - sudo apt-get update
+    - sudo apt-get install build-essential postgresql-9.1 postgresql-server-dev-9.1 libxml2-dev libproj-dev libjson0-dev libgeos-dev xsltproc docbook-xsl docbook-mathml libgdal1-dev
+
+    # Install PostGIS itself.
+    - wget http://download.osgeo.org/postgis/source/postgis-$POSTGIS_VERSION.tar.gz
+    - tar xfvz postgis-$POSTGIS_VERSION.tar.gz
+    - cd postgis-$POSTGIS_VERSION
+    - ./configure --without-topology --with-raster
+    - make
+    - sudo make install
+    - cd ..
 before_script:
+    # Install pip requirements.
+    - "pip install --use-mirrors -r requirements.txt"
     - "pip install --use-mirrors -r tests/requirements.txt"
+
+    # Create our database.
     - "psql -U postgres -c 'create database django_pg;'"
+    - "psql -U postgres -d django_pg -c 'create extension postgis;'"
 script: 'python setup.py test'
