--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
 envlist =
+    _setup,
     docs,
     py3.3-djdev,
     py3.3-djdev-southdev,
@@ -19,6 +20,14 @@ commands =
 
 deps =
     -r{toxinidir}/tests/requirements.txt
+
+
+[testenv:_setup]
+basepython = python3.3
+deps =
+    coverage
+commands =
+    coverage erase
 
 
 [testenv:docs]
@@ -88,4 +97,3 @@ deps =
 commands =
     coverage combine
     coverage report -m
-    coverage erase
