--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,10 @@ envlist =
     py3.3-dj1.6-south0.8,
     py3.3-dj1.5,
     py3.3-dj1.5-south0.8,
+    py2.7-dj1.6,
+    py2.7-dj1.6-south0.8,
+    py2.7-dj1.5,
+    py2.7-dj1.5-south0.8,
     docs,
     _coverage,
 
@@ -17,6 +21,7 @@ commands =
     coverage run -p --source django_pg/ tests/runtests.py gis
 
 deps =
+    six>=1.4.1
     -r{toxinidir}/tests/requirements.txt
 
 
@@ -58,6 +63,44 @@ setenv =
 
 [testenv:py3.3-dj1.5-south0.8]
 basepython = python3.3
+deps =
+    {[testenv]deps}
+    django>=1.5,<1.6
+    south>=0.8,<0.9
+setenv =
+    DJANGO_VERSION = 1.5
+
+
+[testenv:py2.7-dj1.6]
+basepython = python2.7
+deps =
+    {[testenv]deps}
+    https://github.com/django/django/archive/1.6b2.zip
+setenv =
+    DJANGO_VERSION = 1.6
+
+
+[testenv:py2.7-dj1.6-south0.8]
+basepython = python2.7
+deps =
+    {[testenv]deps}
+    https://github.com/django/django/archive/1.6b2.zip
+    south>=0.8,<0.9
+setenv =
+    DJANGO_VERSION = 1.6
+
+
+[testenv:py2.7-dj1.5]
+basepython = python2.7
+deps =
+    {[testenv]deps}
+    django>=1.5,<1.6    
+setenv =
+    DJANGO_VERSION = 1.5
+
+
+[testenv:py2.7-dj1.5-south0.8]
+basepython = python2.7
 deps =
     {[testenv]deps}
     django>=1.5,<1.6
