Setting to automatically use UUID primary keys.
This commit adds a new setting, DJANGOPG_DEFAULT_UUID_PK,
which can be set to True to cause UUID primary keys to automatically
be added in lieu of the Django default AutoField.

--- a/.coveragerc
+++ b/.coveragerc
@@ -2,11 +2,5 @@
 source = django_pg/
 branch = False
 
-[report]
-skip_lines =
-    # Don't complain about defensive lines for turning the
-    # database off.
-    if connection.vendor in ('dummy', 'unknown'):
-
 [html]
-directory = coverage/
+directory = .coverage-html/
