Django 1.7 regression fixes.
This commit does everything necessary to get current functionality
(sans South support) working in Django 1.7.

This includes:

  * Using the new lookups system when Django 1.7 is in use.
  * Updating the call signature of `Query` and `GeoQuery`.
  * Updating the test runner to run `django.setup()` if possible.

This does NOT add support for Django 1.7 stock migrations, and using South
probably does not work (it bombs when tested).

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,12 @@
 [tox]
 envlist =
     _setup,
+    py3.3-dj1.7,
     py3.3-dj1.6,
     py3.3-dj1.6-south0.8,
     py3.3-dj1.5,
     py3.3-dj1.5-south0.8,
+    py2.7-dj1.7,
     py2.7-dj1.6,
     py2.7-dj1.6-south0.8,
     py2.7-dj1.5,
@@ -32,6 +34,15 @@ deps =
     coverage
 commands =
     coverage erase
+
+
+[testenv:py3.3-dj1.7]
+basepython = python3.3
+deps =
+    {[testenv]deps}
+    {toxinidir}/../django/
+setenv =
+    DJANGO_VERSION = 1.7
 
 
 [testenv:py3.3-dj1.6]
@@ -70,6 +81,15 @@ deps =
     south>=0.8,<0.9
 setenv =
     DJANGO_VERSION = 1.5
+
+
+[testenv:py2.7-dj1.7]
+basepython = python2.7
+deps =
+    {[testenv]deps}
+    {toxinidir}/../django/
+setenv =
+    DJANGO_VERSION = 1.7
 
 
 [testenv:py2.7-dj1.6]
